<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="@dimen/dimen10"
    android:background="@color/colorH"
    android:weightSum="1">

    <com.embedded.contacts.utils.BitVaultFont
        style="@style/style_small_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen10"
        android:id="@+id/callTxt"
        android:background="?android:selectableItemBackground"
        android:text="@string/call_icon"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/dimen5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mobileTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/mobileTypeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_mobile"/>

    </LinearLayout>

    <com.embedded.contacts.utils.BitVaultFont
        style="@style/style_small_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen10"
        android:id="@+id/msgTxt"
        android:textColor="@color/colorPrimary"
        android:background="?android:selectableItemBackground"
        android:text="@string/msg_icon" />

</LinearLayout>