<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_hight"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.embedded.contacts.utils.BitVaultFont
                android:id="@+id/id_search_back_txt"
                android:layout_width="@dimen/header_hight"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:gravity="center"
                android:text="@string/back_icon"
                android:textSize="@dimen/text20" />

            <EditText
                android:id="@+id/id_search_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edt_text_bg" />

            <com.embedded.contacts.utils.BitVaultFont
                android:id="@+id/id_search_close_txt"
                style="@style/style_font"
                android:layout_width="@dimen/header_hight"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/close_icon" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/colorA" />

        <ListView
            android:id="@+id/id_search_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="@dimen/dimen0" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen50"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/nocontactsTxt"
            android:textSize="@dimen/text20"
            android:text="@string/no_contacts"/>
    </LinearLayout>

</RelativeLayout>