<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen10"
            android:weightSum="1">

            <com.embedded.contacts.utils.BitVaultFont
                style="@style/style_small_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen15"
                android:layout_marginRight="@dimen/dimen15"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mobileTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/mobileTypeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.embedded.contacts.utils.BitVaultFont
                style="@style/style_small_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_icon" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen1"

            android:layout_marginStart="@dimen/dimen40"
            android:background="@color/colorE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen10"
            android:weightSum="1">

            <!--<com.embedded.contacts.utils.BitVaultFont
                style="@style/style_small_font"
                android:layout_width="wrap_content"
                android:id="@+id/secure_cal_key"
                android:layout_height="wrap_content"
                android:text="@string/key_icon" />-->
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                style="@style/style_small_font"
                android:src="@drawable/securecallicon"
                android:id="@+id/secure_cal_key"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen15"
                android:layout_marginRight="@dimen/dimen15"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/publicKeyTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/keyHeadingTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/public_key"/>

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/msg_icon_size"
                android:layout_height="@dimen/msg_icon_size"
                android:src="@drawable/ic_secure_messaging"
                android:id="@+id/msgImg"
                android:background="?android:selectableItemBackground"
                android:padding="@dimen/dimen10"
                android:text="@string/msg_icon" />


        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>